results/EXP_030b_G_vacuum.txt
  File "<string>", line 151
    print(f'''
          ^
SyntaxError: unterminated triple-quoted string literal (detected at line 162)
